--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,16 @@
 {
-  "manifest_version": 2,
-  "name": "Getting started example",
-  "version": "1.0",
-  "description": "This extension shows a Google Image search result for the current page",
-  "browser_action": {
-    "default_icon": "icon.png",
-    "default_popup": "popup.html"
-  },
+  "name": "RTL Github File Editor",
+  "description": "Make github file editor RTL",
+  "version": "0.1",
   "permissions": [
-    "activeTab",
-    "https://ajax.googleapis.com/"
-  ]
+    "activeTab"
+  ],
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  },
+  "browser_action": {
+    "default_title": "RTL github text editor"
+  },
+  "manifest_version": 2
 }
